tests/grammar/quant/any/multi_cons_invalid_2/stderr.golden
error[E3M38]: EvaluationError
  --> ${CWD}/main.k:10:8
   |
10 | main = app_conf {
   |        ^ Instance check failed
   |
 --> ${CWD}/main.k:7:1
  |
7 |         }, "invalid port"
  |  Check failed on the condition: invalid port
  |